Adding a task input zone

--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
 </head>
 
 <body>
-
+    <div class="container d-flex justify-content-center align-items-center mt-5">
+        <div class="col col-sm-12 col-md-8 col-lg-6">
+            <div class="wrapper">
+                <!--Task adding zone-->
+                <div class=" task task-input-zone bg-light p-5">
+                    <h1 class=" title text-center">To-Do List</h1>
+                    <div class="input-group my-3">
+                        <input type="text" name="" id="taskInput" class="form-control"
+                            placeholder="What you want to do?">
+                        <button class="btn btn-primary" id="addBtn" onclick="addNewTask()">Add Task</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 </body>
 
 </html>
