--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
                         <button class="btn btn-primary" id="addBtn" onclick="addNewTask()">Add Task</button>
                     </div>
                 </div>
+
+                <!--Tasks Container-->
+                <div class="task task-container bg-light mt-3 p-3">
+                    <div class="todos-container p-2" id="container">
+
+                    </div>
+                </div>
             </div>
         </div>
 </body>
