--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
                 </div>
             </div>
         </div>
+    </div>
+    <template id="template">
+        <div class="row m-2">
+            <div class="col col-8">
+                <p id="todoItem"></p>
+            </div>
+            <div class="col col-4">
+                <button class="btn btn-success btn-sm" onclick="markAsFinished()">Finished</button>
+                <button class="btn btn-danger btn-sm" onclick="deleteTask()">Delete</button>
+            </div>
+        </div>
+    </template>
 </body>
 
 </html>
