Adding animation on delete

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <template id="template">
-        <div class="row m-2">
+        <div class="row m-2 item">
             <div class="col col-8">
                 <p id="todoItem"></p>
             </div>
