Styling tasks input and task title

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <template id="template">
         <div class="row m-2 item">
             <div class="col col-8">
-                <p id="todoItem"></p>
+                <p id="todoItem" class="todoTitle"></p>
             </div>
             <div class="col col-4">
                 <button class="btn btn-success btn-sm" onclick="markAsFinished()">Finished</button>
