Adding favicon to project

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/Css/style.css">
     <link rel="stylesheet" href="/Css/scrollBar.css">
     <script src="/JS/index.js" defer></script>
+    <link rel="shortcut icon" href="/assets/icon/task.png" type="image/x-icon">
 </head>
 
 <body>
