Adding storage tasks functionality

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="col col-4">
                 <button class="btn btn-success btn-sm" onclick="markAsFinished()">Finished</button>
-                <button class="btn btn-danger btn-sm" onclick="deleteTask()">Delete</button>
+                <button class="btn btn-danger btn-sm" onclick="deleteTask(this)">Delete</button>
             </div>
         </div>
     </template>
